# rustypaste-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml
.github/: CODEOWNERS  mergify.yml
.github/workflows/: cd.yml  ci-beta-nightly.yml  ci.yml
man/: rpaste.1
src/: args.rs  config.rs  error.rs  lib.rs  main.rs  upload.rs
tests/token_file_parsing/: token.txt  token_whitespaced.txt
