[package]
name = "rustypaste-cli"
version = "0.9.4"
edition = "2021"
description = "A CLI tool for rustypaste"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/orhun/rustypaste"
repository = "https://github.com/orhun/rustypaste-cli"
keywords = ["paste", "pastebin", "upload"]
categories = ["command-line-utilities"]
default-run = "rpaste"

[[bin]]
name = "rpaste"
path = "src/main.rs"

[features]
default = []
use-native-certs = ["ureq/native-certs"]

[dependencies]
serde = { version = "1.0.225", default-features = false, features = ["derive"] }
toml = "0.9.7"
dirs-next = "2.0.0"
thiserror = "2.0.16"
getopts = "0.2.24"
ureq = { version = "2.12.1", features = ["json"] }
multipart = { version = "0.18.0", default-features = false, features = [
  "client",
] }
colored = "3.0.0"
url = "2.5.7"
indicatif = "0.18.0"
shellexpand = "3.1.1"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
