[package]
name = "rustypaste-cli"
version = "0.9.5"
edition = "2021"
description = "A CLI tool for rustypaste"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/orhun/rustypaste"
repository = "https://github.com/orhun/rustypaste-cli"
keywords = ["paste", "pastebin", "upload"]
categories = ["command-line-utilities"]
default-run = "rpaste"

[[bin]]
name = "rpaste"
path = "src/main.rs"

[features]
default = []
use-native-certs = ["dep:rustls-native-certs"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
toml = "1.1.2"
thiserror = "2.0.18"
getopts = "0.2.24"
ureq = { version = "3.3.0", features = ["json"] }
rustls-native-certs = { version = "0.8.4", optional = true }
multipart = { version = "0.18.0", default-features = false, features = [
  "client",
] }
colored = "3.1.1"
url = "2.5.8"
indicatif = "0.18.4"
shellexpand = "3.1.2"
etcetera = "0.11.0"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
